<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="122dp"
        android:text="@string/dzien_dobry"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="240dp"
        android:hint="@string/imie"
        android:inputType="text"
        android:maxLength="12"
        android:autofillHints="Jacek">

    </EditText>

    <EditText
        android:id="@+id/inputWeight"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="304dp"
        android:autofillHints="70"
        android:hint="@string/masa_ciala"
        android:inputType="number"
        android:maxLength="12"
        tools:ignore="TextFields">

    </EditText>

    <EditText
        android:id="@+id/inputCalories"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="365dp"
        android:hint="@string/dzienne_kalorie"
        android:inputType="number"
        android:maxLength="12"
        android:autofillHints="">

    </EditText>

    <Button
        android:id="@+id/check"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="134dp"
        android:layout_marginBottom="91dp"
        android:text="@string/zatwierdz">

    </Button>


</RelativeLayout>