<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center"

    tools:context=".Waterpanel">


    <TextView
        android:id="@+id/watercalc"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="78dp"
        android:layout_marginTop="109dp"
        android:text="@string/dzien_dobry"
        android:textAlignment="center"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="-2dp"
        android:gravity="center"
        android:text="TextView" />

    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="158dp"
        android:layout_marginBottom="47dp"
        android:text="@string/edytuj"
        android:textSize="15dp"></Button>

    <Button
        android:id="@+id/again"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="253dp"
        android:text="@string/Again"
        android:visibility="invisible">

    </Button>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieGlass"
        android:layout_width="wrap_content"
        android:layout_height="412dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="62dp"
        app:lottie_rawRes="@raw/waterglass" />


</RelativeLayout>
